--- a/1-screening.tex
+++ b/1-screening.tex
@@ -75,7 +75,7 @@ Beyond the experimental techniques, there are softwares such as Zeo++ or PoreBla
   \begin{subfigure}[b]{0.32\textwidth}
     \centering
     \includegraphics[height=0.7\textwidth]{figures/1-screening/SBMOF-1.jpg}
-    \caption{MOF KAXQIL~\cite{KAXQIL}}
+    \caption{MOF \texttt{KAXQIL}~\cite{KAXQIL}}
   \end{subfigure}
   \caption{Illustration of a zeolite, a covalent organic framework (COF) and a metal--organic framework (MOF). Color code: brown for C, white for H, red for O, blue for Si, cyan for Ca, yellow for S and green for B. The structure visualizations were generated using the VESTA software.\autocite{VESTA}}
 \end{figure}
@@ -274,7 +274,7 @@ In its early stage, computational screening has been used on a small series of n
 
 The first large-scale computational screening on Xe/Kr adsorption-based was performed by Sikora et al.\ based on the same approach previously developed for methane storage by their group at the Northwestern University.\autocite{Sikora_2012} This study was based on the same {137,000} structures of hypothetical MOFs.\autocite{Wilmer_2012} They calculated the Xe/Kr selectivity using Monte Carlo molecular simulations on the whole database by iteratively increasing the number of steps and selecting the best materials similar to the approach on Figure~\ref{fgr:screening}. By analyzing the relationships between pore sizes and selectivity, they confirmed a hypothesis from a smaller scale study that the pores should be between the size of 1 to 2 xenon molecules.\autocite{Ryan_2010} Tube-like channel was also found to favor better selectivity. Moreover, they found that top performing materials could have a selectivity around 500; but we can only conclude on the order of magnitude of the theoretical limitation of the Xe/Kr selectivity, considering the statistical uncertainty of the simulation.
 
-Seizing the opportunity of a formidable expansion of the nanoporous materials database triggered by the Materials Genome Initiative, Simon et al.\ screened 670,000 experimental and hypothetical nanoporous material structures for Xe/Kr separation (see Figure~\ref{fgr:Simon}).\autocite{Simon_2015} It is one of the largest-scale screenings performed in this area. Inspired by the work of Fernandez and co-workers,\autocite{Fernandez_2013} they used ML algorithms to train a model on a diverse subset of 15,000 structures. This method allowed them to run time-consuming molecular simulations only on this training set, before applying the ML model to predict the selectivity values on the larger set of structures. On top of analyzing the links between pore descriptors and selectivity, they rationalized it using theoretical pore models of spherical and cylindrical geometries to confirm the findings of Snurr and co-workers.\autocite{Ryan_2010,Sikora_2012} By comparing the structural descriptors of good-performing and bad-performing structures, they concluded that geometrical descriptors wasn't enough to explain the performance. The analysis of a few top candidates suggests that different chemical insights could explain their good performance. For SBMOF-1 or KAXQIL,\autocite{KAXQIL} an experimental MOF, its higher performance was explained by the tubelike 1D channel with a very favorable binding site formed by carbon aromatic rings. This nanoporous material was later tested using breakthrough experiments and proved to be one of the most promising candidates.\autocite{Banerjee_2016} This close collaboration between computation and experimentation is a testimony of the potential of computational screenings to find nanoporous materials for any targeted application.
+Seizing the opportunity of a formidable expansion of the nanoporous materials database triggered by the Materials Genome Initiative, Simon et al.\ screened 670,000 experimental and hypothetical nanoporous material structures for Xe/Kr separation (see Figure~\ref{fgr:Simon}).\autocite{Simon_2015} It is one of the largest-scale screenings performed in this area. Inspired by the work of Fernandez and co-workers,\autocite{Fernandez_2013} they used ML algorithms to train a model on a diverse subset of 15,000 structures. This method allowed them to run time-consuming molecular simulations only on this training set, before applying the ML model to predict the selectivity values on the larger set of structures. On top of analyzing the links between pore descriptors and selectivity, they rationalized it using theoretical pore models of spherical and cylindrical geometries to confirm the findings of Snurr and co-workers.\autocite{Ryan_2010,Sikora_2012} By comparing the structural descriptors of good-performing and bad-performing structures, they concluded that geometrical descriptors wasn't enough to explain the performance. The analysis of a few top candidates suggests that different chemical insights could explain their good performance. For SBMOF-1 or \texttt{KAXQIL},\autocite{KAXQIL} an experimental MOF, its higher performance was explained by the tubelike 1D channel with a very favorable binding site formed by carbon aromatic rings. This nanoporous material was later tested using breakthrough experiments and proved to be one of the most promising candidates.\autocite{Banerjee_2016} This close collaboration between computation and experimentation is a testimony of the potential of computational screenings to find nanoporous materials for any targeted application.
 
 \begin{figure*}[t]
   \centering
