--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -582,19 +582,19 @@ Furthermore, the scatterplot of $k\e{H}$ and $k\e{S}$ (shown on Figure~\ref{fgr:
       \hline
         CSD Refcode & Ref. & $s\e{0}$ &  $s\e{1}$  &  $s\e{1}/s\e{0}$ &  $k\e{H}$ &  $k\e{S}$ & D$_i$ & D$_f$ \\
       \hline
-      VOKJIQ &~\cite{VOKJIQ} &           $157.17$ &  $242.73$ &  $1.54$ &  $1.46$ &  $1.06$  &  $5.2$  &  $3.2$  \\
-      KAXQIL &~\cite{KAXQIL} &           $103.78$ &  $132.57$ &  $1.28$ &  $1.32$ &  $0.96$  &  $5.2$  &  $4.1$  \\
-      JUFBIX &~\cite{JUFBIX} &           $106.11$ &  $114.83$ &  $1.08$ &  $1.08$ &  $1.00$  &  $5.3$  &  $3.0$  \\
-      FALQOA &~\cite{FALQOA} &           $162.20$ &  $171.10$ &  $1.05$ &  $1.09$ &  $0.96$  &  $5.1$  &  $3.5$  \\
-      GOMREG &~\cite{GOMREG_GOMRAC} &    $114.14$ &  $ 73.83$ &  $0.65$ &  $1.01$ &  $0.64$  &  $5.8$  &  $4.0$  \\
-      JAVTAC &~\cite{JAVTAC} &           $117.38$ &  $ 66.93$ &  $0.57$ &  $0.77$ &  $0.74$  &  $5.5$  &  $4.3$  \\
-      GOMRAC &~\cite{GOMREG_GOMRAC} &    $124.11$ &  $ 47.34$ &  $0.38$ &  $0.58$ &  $0.66$  &  $5.7$  &  $3.7$  \\
-      MISQIQ &~\cite{MISQIQ} &           $138.94$ &  $ 37.32$ &  $0.27$ &  $0.51$ &  $0.53$  &  $4.6$  &  $4.4$  \\
-    BAEDTA01 &~\cite{BAEDTA01} &         $154.10$ &  $ 37.74$ &  $0.24$ &  $0.12$ &  $1.97$  &  $5.7$  &  $4.6$  \\
-      VIWMOF &~\cite{VIWMOF} &           $ 81.13$ &  $ 13.24$ &  $0.16$ &  $0.04$ &  $4.30$  & $10.2$  &  $5.3$  \\
-      LUDLAZ &~\cite{LUDLAZ} &           $165.68$ &  $ 16.42$ &  $0.10$ &  $0.16$ &  $0.63$  &  $6.7$  &  $4.2$  \\
-      WOJJOV &~\cite{WOJJOV} &           $146.32$ &  $ 13.94$ &  $0.10$ &  $0.06$ &  $1.68$  &  $8.2$  &  $6.8$  \\
-      VAPBIZ &~\cite{VAPBIZ} &           $146.73$ &  $ 12.76$ &  $0.09$ &  $0.06$ &  $1.50$  &  $6.3$  &  $3.7$  \\
+      \texttt{VOKJIQ} & \cite{VOKJIQ} &           $157.17$ &  $242.73$ &  $1.54$ &  $1.46$ &  $1.06$  &  $5.2$  &  $3.2$  \\
+      \texttt{KAXQIL} & \cite{KAXQIL} &           $103.78$ &  $132.57$ &  $1.28$ &  $1.32$ &  $0.96$  &  $5.2$  &  $4.1$  \\
+      \texttt{JUFBIX} & \cite{JUFBIX} &           $106.11$ &  $114.83$ &  $1.08$ &  $1.08$ &  $1.00$  &  $5.3$  &  $3.0$  \\
+      \texttt{FALQOA} & \cite{FALQOA} &           $162.20$ &  $171.10$ &  $1.05$ &  $1.09$ &  $0.96$  &  $5.1$  &  $3.5$  \\
+      \texttt{GOMREG} & \cite{GOMREG_GOMRAC} &    $114.14$ &  $ 73.83$ &  $0.65$ &  $1.01$ &  $0.64$  &  $5.8$  &  $4.0$  \\
+      \texttt{JAVTAC} & \cite{JAVTAC} &           $117.38$ &  $ 66.93$ &  $0.57$ &  $0.77$ &  $0.74$  &  $5.5$  &  $4.3$  \\
+      \texttt{GOMRAC} & \cite{GOMREG_GOMRAC} &    $124.11$ &  $ 47.34$ &  $0.38$ &  $0.58$ &  $0.66$  &  $5.7$  &  $3.7$  \\
+      \texttt{MISQIQ} & \cite{MISQIQ} &           $138.94$ &  $ 37.32$ &  $0.27$ &  $0.51$ &  $0.53$  &  $4.6$  &  $4.4$  \\
+     \texttt{BAEDTA01}& \cite{BAEDTA01} &         $154.10$ &  $ 37.74$ &  $0.24$ &  $0.12$ &  $1.97$  &  $5.7$  &  $4.6$  \\
+      \texttt{VIWMOF} & \cite{VIWMOF} &           $ 81.13$ &  $ 13.24$ &  $0.16$ &  $0.04$ &  $4.30$  & $10.2$  &  $5.3$  \\
+      \texttt{LUDLAZ} & \cite{LUDLAZ} &           $165.68$ &  $ 16.42$ &  $0.10$ &  $0.16$ &  $0.63$  &  $6.7$  &  $4.2$  \\
+      \texttt{WOJJOV} & \cite{WOJJOV} &           $146.32$ &  $ 13.94$ &  $0.10$ &  $0.06$ &  $1.68$  &  $8.2$  &  $6.8$  \\
+      \texttt{VAPBIZ} & \cite{VAPBIZ} &           $146.73$ &  $ 12.76$ &  $0.09$ &  $0.06$ &  $1.50$  &  $6.3$  &  $3.7$  \\
       \hline 
   \end{tabular*}
   \caption{Enthalpic ($k\e{H}$) and entropic ($k\e{S}$) contributions to the selectivity change ($s\e{1}/s\e{0}$) between low and ambient pressures for some archetypal structures selected for their high $s\e{0}$ selectivity at infinite dilution. Every structure is identified using a CSD Refcode and a reference the first article that mentions it. The pore size is also characterized using the diameters D$_i$ and D$_f$ in \si{\angstrom}.}\label{tbl:effect}
@@ -611,19 +611,19 @@ This section will examine the most selective materials identified at low pressur
     \hline
           CSD Refcode & Ref. &  $s\e{0}$ &  $K\ex{Xe}$ &  $K\ex{Kr}$ &  $\Delta\e{ads}H\ex{Xe}\e{0}$ &  $\Delta\e{ads}H\ex{Kr}\e{0}$  &  $s\e{1}$ &  $q\ex{Xe}\e{1}$ &  $q\ex{Kr}\e{1}$ &  $\Delta\e{ads}H\ex{Xe}\e{1}$ &  $\Delta\e{ads}H\ex{Xe}\e{1}$ \\
     \hline
-        VOKJIQ &~\cite{VOKJIQ}        &  $157$  &  $7.92\,10^{-1}$  &  $5.04\,10^{-3}$  &  $-53.9$  &  $-38.2$  &  $243$  &  $2.57$  &  $0.04$  &  $-61.1$  &  $-44.5$  \\
-        KAXQIL &~\cite{KAXQIL}        &  $104$  &  $3.01\,10^{-2}$  &  $2.90\,10^{-4}$  &  $-44.6$  &  $-30.5$  &  $133$  &  $1.41$  &  $0.04$  &  $-41.5$  &  $-26.8$  \\
-        JUFBIX &~\cite{JUFBIX}        &  $106$  &  $1.59\,10^{-2}$  &  $1.50\,10^{-4}$  &  $-45.6$  &  $-31.4$  &  $115$  &  $0.80$  &  $0.03$  &  $-45.7$  &  $-31.3$  \\
-        FALQOA &~\cite{FALQOA}        &  $162$  &  $2.23\,10^{-2}$  &  $1.38\,10^{-4}$  &  $-47.3$  &  $-32.0$  &  $171$  &  $0.68$  &  $0.02$  &  $-48.6$  &  $-33.1$  \\
-        GOMREG &~\cite{GOMREG_GOMRAC} &  $114$  &  $9.16\,10^{-2}$  &  $8.03\,10^{-4}$  &  $-44.7$  &  $-31.1$  &  $ 74$  &  $2.59$  &  $0.14$  &  $-47.5$  &  $-33.8$  \\
-        JAVTAC &~\cite{JAVTAC}        &  $117$  &  $1.24\,10^{-1}$  &  $1.06\,10^{-3}$  &  $-47.7$  &  $-33.5$  &  $ 67$  &  $1.50$  &  $0.09$  &  $-48.5$  &  $-34.9$  \\
-        GOMRAC &~\cite{GOMREG_GOMRAC} &  $124$  &  $1.17\,10^{-1}$  &  $9.45\,10^{-4}$  &  $-45.6$  &  $-31.8$  &  $ 47$  &  $2.51$  &  $0.21$  &  $-47.3$  &  $-34.8$  \\
-        MISQIQ &~\cite{MISQIQ}        &  $139$  &  $6.87\,10^{-1}$  &  $4.94\,10^{-3}$  &  $-51.9$  &  $-37.4$  &  $ 37$  &  $2.30$  &  $0.25$  &  $-45.6$  &  $-32.8$  \\
-      BAEDTA01 &~\cite{BAEDTA01}      &  $154$  &  $1.39\,10^{-2}$  &  $9.04\,10^{-5}$  &  $-47.7$  &  $-31.7$  &  $ 38$  &  $1.05$  &  $  11$  &  $-34.0$  &  $-23.1$  \\
-        VIWMOF &~\cite{VIWMOF}        &  $ 81$  &  $7.87\,10^{-3}$  &  $9.70\,10^{-5}$  &  $-46.3$  &  $-30.1$  &  $ 13$  &  $2.99$  &  $0.90$  &  $-26.0$  &  $-17.8$  \\
-        LUDLAZ &~\cite{LUDLAZ}        &  $166$  &  $9.04\,10^{-2}$  &  $5.46\,10^{-4}$  &  $-45.4$  &  $-30.9$  &  $ 16$  &  $1.59$  &  $0.39$  &  $-38.3$  &  $-28.3$  \\
-        WOJJOV &~\cite{WOJJOV}        &  $146$  &  $4.19\,10^{-2}$  &  $2.86\,10^{-4}$  &  $-46.4$  &  $-30.7$  &  $ 14$  &  $2.82$  &  $0.81$  &  $-33.0$  &  $-24.4$  \\
-        VAPBIZ &~\cite{VAPBIZ}        &  $147$  &  $3.54\,10^{-2}$  &  $2.41\,10^{-4}$  &  $-46.4$  &  $-30.5$  &  $ 13$  &  $2.50$  &  $0.78$  &  $-34.1$  &  $-25.3$  \\
+        \texttt{VOKJIQ} & \cite{VOKJIQ}        &  $157$  &  $7.92\,10^{-1}$  &  $5.04\,10^{-3}$  &  $-53.9$  &  $-38.2$  &  $243$  &  $2.57$  &  $0.04$  &  $-61.1$  &  $-44.5$  \\
+        \texttt{KAXQIL} & \cite{KAXQIL}        &  $104$  &  $3.01\,10^{-2}$  &  $2.90\,10^{-4}$  &  $-44.6$  &  $-30.5$  &  $133$  &  $1.41$  &  $0.04$  &  $-41.5$  &  $-26.8$  \\
+        \texttt{JUFBIX} & \cite{JUFBIX}        &  $106$  &  $1.59\,10^{-2}$  &  $1.50\,10^{-4}$  &  $-45.6$  &  $-31.4$  &  $115$  &  $0.80$  &  $0.03$  &  $-45.7$  &  $-31.3$  \\
+        \texttt{FALQOA} & \cite{FALQOA}        &  $162$  &  $2.23\,10^{-2}$  &  $1.38\,10^{-4}$  &  $-47.3$  &  $-32.0$  &  $171$  &  $0.68$  &  $0.02$  &  $-48.6$  &  $-33.1$  \\
+        \texttt{GOMREG} & \cite{GOMREG_GOMRAC} &  $114$  &  $9.16\,10^{-2}$  &  $8.03\,10^{-4}$  &  $-44.7$  &  $-31.1$  &  $ 74$  &  $2.59$  &  $0.14$  &  $-47.5$  &  $-33.8$  \\
+        \texttt{JAVTAC} & \cite{JAVTAC}        &  $117$  &  $1.24\,10^{-1}$  &  $1.06\,10^{-3}$  &  $-47.7$  &  $-33.5$  &  $ 67$  &  $1.50$  &  $0.09$  &  $-48.5$  &  $-34.9$  \\
+        \texttt{GOMRAC} & \cite{GOMREG_GOMRAC} &  $124$  &  $1.17\,10^{-1}$  &  $9.45\,10^{-4}$  &  $-45.6$  &  $-31.8$  &  $ 47$  &  $2.51$  &  $0.21$  &  $-47.3$  &  $-34.8$  \\
+        \texttt{MISQIQ} & \cite{MISQIQ}        &  $139$  &  $6.87\,10^{-1}$  &  $4.94\,10^{-3}$  &  $-51.9$  &  $-37.4$  &  $ 37$  &  $2.30$  &  $0.25$  &  $-45.6$  &  $-32.8$  \\
+        \texttt{BAEDTA01} & \cite{BAEDTA01}      &  $154$  &  $1.39\,10^{-2}$  &  $9.04\,10^{-5}$  &  $-47.7$  &  $-31.7$  &  $ 38$  &  $1.05$  &  $  11$  &  $-34.0$  &  $-23.1$  \\
+        \texttt{VIWMOF} & \cite{VIWMOF}        &  $ 81$  &  $7.87\,10^{-3}$  &  $9.70\,10^{-5}$  &  $-46.3$  &  $-30.1$  &  $ 13$  &  $2.99$  &  $0.90$  &  $-26.0$  &  $-17.8$  \\
+        \texttt{LUDLAZ} & \cite{LUDLAZ}        &  $166$  &  $9.04\,10^{-2}$  &  $5.46\,10^{-4}$  &  $-45.4$  &  $-30.9$  &  $ 16$  &  $1.59$  &  $0.39$  &  $-38.3$  &  $-28.3$  \\
+        \texttt{WOJJOV} & \cite{WOJJOV}        &  $146$  &  $4.19\,10^{-2}$  &  $2.86\,10^{-4}$  &  $-46.4$  &  $-30.7$  &  $ 14$  &  $2.82$  &  $0.81$  &  $-33.0$  &  $-24.4$  \\
+        \texttt{VAPBIZ} & \cite{VAPBIZ}        &  $147$  &  $3.54\,10^{-2}$  &  $2.41\,10^{-4}$  &  $-46.4$  &  $-30.5$  &  $ 13$  &  $2.50$  &  $0.78$  &  $-34.1$  &  $-25.3$  \\
     \hline
     \end{tabular}
     \caption{\ Thermodynamic quantities associated for a few archetypal structures. Henry constant $K\ex{Xe}$, $K\ex{Kr}$ are in \si{\milli\mol\per\gram\per\pascal}, loadings $q\ex{Xe}\e{1}$ and $q\ex{Kr}\e{1}$ are in \si{\milli\mol\per\gram}, enthalpies $\Delta\e{ads}H\ex{Xe}\e{0}$, $\Delta\e{ads}H\ex{Xe}\e{0}$, $\Delta\e{ads}H\ex{Xe}\e{1}$ and $\Delta\e{ads}H\ex{Xe}\e{1}$ are in \si{\kilo\joule\per\mol}}\label{tbl:thermo}
@@ -639,7 +639,7 @@ where $q$ is the adsorbed quantity of a mono-component gas, $K$ is the adsorptio
 \end{equation}
 where $q$ is the total loading of a given mono-component gas, $K_1$ and $K_2$ are the adsorption equilibrium constants in the respective sites, $\alpha\e{2}$ is the proportion of secondary sites, and $P$ is the pressure.
   
-This section will study a few examples of the category of materials where ambient-pressure selectivity is close to (or even higher than) the low-pressure value. For the material VOKJIQ,\autocite{VOKJIQ} an open-framework aluminophosphate, [HAl$_3$P$_3$O$_{13}$]$\cdot$C$_3$NH$_{10}$, the selectivity increases by a factor of $1.5$ between low and ambient pressure. Upon closer examination, it is observed that the adsorption enthalpy of xenon $\Delta\e{ads}H\ex{Xe}$ decreases from $-53.9$\,\si{\kilo\joule\per\mol} to $-61.1$\,\si{\kilo\joule\per\mol}, whereas the adsorption enthalpy for krypton $\Delta\e{ads}H\ex{Kr}$ decreases from $-38.2$\,\si{\kilo\joule\per\mol} to $-44.5$\,\si{\kilo\joule\per\mol} (\emph{cf.} Table~\ref{tbl:thermo}). 
+This section will study a few examples of the category of materials where ambient-pressure selectivity is close to (or even higher than) the low-pressure value. For the material \texttt{VOKJIQ},\autocite{VOKJIQ} an open-framework aluminophosphate, [HAl$_3$P$_3$O$_{13}$]$\cdot$C$_3$NH$_{10}$, the selectivity increases by a factor of $1.5$ between low and ambient pressure. Upon closer examination, it is observed that the adsorption enthalpy of xenon $\Delta\e{ads}H\ex{Xe}$ decreases from $-53.9$\,\si{\kilo\joule\per\mol} to $-61.1$\,\si{\kilo\joule\per\mol}, whereas the adsorption enthalpy for krypton $\Delta\e{ads}H\ex{Kr}$ decreases from $-38.2$\,\si{\kilo\joule\per\mol} to $-44.5$\,\si{\kilo\joule\per\mol} (\emph{cf.} Table~\ref{tbl:thermo}). 
 
 This phenomenon of increased stability of the adsorption sites upon loading is not commonly observed in nanoporous materials for rare gas adsorption. It can be attributed to a cooperative effect between the adsorbed molecules, where the interaction between the adsorbed xenon molecules is more favorable than that between the adsorbed krypton molecules. This preference stems from the stabilization due to the interatomic distance within the pores, which closely matches the energy well for favorable Lennard-Jones potential for xenon-xenon interactions, unlike the case for krypton-krypton interactions (where the distance exceeds \SI{4.2}{\angstrom}; see Figure~\ref{fgr:LJ}).
 
@@ -649,56 +649,56 @@ This phenomenon of increased stability of the adsorption sites upon loading is n
     \caption{\ The LJ potentials for xenon and krypton interactions. The xenon-xenon interaction is more stabilizing than the krypton-krypton interaction for interatomic distance higher than \SI{4.2}{\angstrom}.}\label{fgr:LJ}
   \end{figure}
 
-In the case of KAXQIL, the material features one-dimensional tubes as channels (see Figure~\ref{fgr:SI:examples:KAXQIL}), with a distance between two adsorption sites that is approximately the unit cell parameter along the tube direction (\SI{5.6}{\angstrom}). The selectivity of this material increases with pore filling, primarily driven by enthalpic considerations, which can be explained through a relatively straightforward rationale. By estimating the Lennard-Jones potentials $U\ex{LJ}$ for all species at a distance of \SI{5.6}{\angstrom}: $U\ex{LJ}\e{Xe-Xe}=-1.0$\,\si{\kilo\joule\per\mol}, $U\ex{LJ}\e{Kr-Kr}=-0.3$\,\si{\kilo\joule\per\mol} and $U\ex{LJ}\e{Xe-Kr}=-0.5$\,\si{\kilo\joule\per\mol}. In a simplified model where all adsorbed molecules are assumed to be \SI{5.6}{\angstrom} apart, the cooperative effect between two xenon molecules is more significant, which accounts for the increased selectivity at high uptake. Further analysis of the adsorption enthalpies of xenon and krypton (\emph{cf.} Table~\ref{tbl:thermo}) reveals that both values increase. This can be attributed to the guest molecules deviating from the ``ideal'' adsorption sites, resulting in guest-guest interactions that do not fully compensate. Consequently, the selectivity change observed in this material is a consequence of the rearrangement of adsorbate positions within the nanopores, driven by guest-guest interactions. 
+In the case of \texttt{KAXQIL}, the material features one-dimensional tubes as channels (see Figure~\ref{fgr:SI:examples:KAXQIL}), with a distance between two adsorption sites that is approximately the unit cell parameter along the tube direction (\SI{5.6}{\angstrom}). The selectivity of this material increases with pore filling, primarily driven by enthalpic considerations, which can be explained through a relatively straightforward rationale. By estimating the Lennard-Jones potentials $U\ex{LJ}$ for all species at a distance of \SI{5.6}{\angstrom}: $U\ex{LJ}\e{Xe-Xe}=-1.0$\,\si{\kilo\joule\per\mol}, $U\ex{LJ}\e{Kr-Kr}=-0.3$\,\si{\kilo\joule\per\mol} and $U\ex{LJ}\e{Xe-Kr}=-0.5$\,\si{\kilo\joule\per\mol}. In a simplified model where all adsorbed molecules are assumed to be \SI{5.6}{\angstrom} apart, the cooperative effect between two xenon molecules is more significant, which accounts for the increased selectivity at high uptake. Further analysis of the adsorption enthalpies of xenon and krypton (\emph{cf.} Table~\ref{tbl:thermo}) reveals that both values increase. This can be attributed to the guest molecules deviating from the ``ideal'' adsorption sites, resulting in guest-guest interactions that do not fully compensate. Consequently, the selectivity change observed in this material is a consequence of the rearrangement of adsorbate positions within the nanopores, driven by guest-guest interactions. 
 
 \begin{figure*}[ht]
   \centering
     \includegraphics[width=0.45\textwidth]{figures/2-thermo/KAXQIL_clean.jpg}
     \includegraphics[width=0.45\textwidth]{figures/2-thermo/KAXQIL_clean_isotherm_xenon_krypton_298K.jpg}
-    \caption{KAXQIL: On the left side, an illustration of a clean version (all solvent removed) of the calcium coordination framework [Ca(SDB)]$\cdot$H$_2$O, where SDB = 4,$4'$-sulfonyldibenzoate loaded with xenon and krypton obtained by GCMC calculations. Color code: Ca in dark cyan, C in gray, O in red, H in white, S in yellow; Xe in transparent pink and Kr in cyan for the adsorbates. The mono-component isotherms fitted with a 1-site Langmuir model (equation~\ref{eq:langmuir_1}) for both xenon and krypton at \SI{298}{\kelvin} is represented on the right side.}\label{fgr:SI:examples:KAXQIL}
+    \caption{\texttt{KAXQIL}: On the left side, an illustration of a clean version (all solvent removed) of the calcium coordination framework [Ca(SDB)]$\cdot$H$_2$O, where SDB = 4,$4'$-sulfonyldibenzoate loaded with xenon and krypton obtained by GCMC calculations. Color code: Ca in dark cyan, C in gray, O in red, H in white, S in yellow; Xe in transparent pink and Kr in cyan for the adsorbates. The mono-component isotherms fitted with a 1-site Langmuir model (equation~\ref{eq:langmuir_1}) for both xenon and krypton at \SI{298}{\kelvin} is represented on the right side.}\label{fgr:SI:examples:KAXQIL}
   \end{figure*}
 
-To further validate the role of the guest--guest interactions, another material with one-dimensional tubelike channels is considered: JUFBIX, a cobalt(II) coordination polymer based on carboxylic acid linkers (see Figure~\ref{fgr:SI:examples:JUFBIX}).\autocite{JUFBIX} The periodicity along the tube direction is significantly larger at $7.2$\,\si{\angstrom}. The pair interaction energies corresponding to the LJ potentials at this distance are determined as $U\ex{LJ}\e{Xe-Xe}=-0.24$\,\si{\kilo\joule\per\mol}, $U\ex{LJ}\e{Kr-Kr}=-0.06$\,\si{\kilo\joule\per\mol} and $U\ex{LJ}\e{Xe-Kr}=-0.13$\,\si{\kilo\joule\per\mol}. Upon analyzing the adsorption enthalpies (Table~\ref{tbl:effect}), it is observed that these values are too small to affect the positioning of the adsorbed molecules. When the loading is high, resulting in a significant distance between the adsorbed molecules, each adsorption site becomes independent of others. Consequently, the ambient-pressure selectivity $s\e{1}$ remains equal to the low-pressure selectivity $s\e{0}$ since the guest--guest interactions become negligible. This finding substantiates the critical role played by cooperative effects among guest molecules when considering a saturated material.
+To further validate the role of the guest--guest interactions, another material with one-dimensional tubelike channels is considered: \texttt{JUFBIX}, a cobalt(II) coordination polymer based on carboxylic acid linkers (see Figure~\ref{fgr:SI:examples:JUFBIX}).\autocite{JUFBIX} The periodicity along the tube direction is significantly larger at $7.2$\,\si{\angstrom}. The pair interaction energies corresponding to the LJ potentials at this distance are determined as $U\ex{LJ}\e{Xe-Xe}=-0.24$\,\si{\kilo\joule\per\mol}, $U\ex{LJ}\e{Kr-Kr}=-0.06$\,\si{\kilo\joule\per\mol} and $U\ex{LJ}\e{Xe-Kr}=-0.13$\,\si{\kilo\joule\per\mol}. Upon analyzing the adsorption enthalpies (Table~\ref{tbl:effect}), it is observed that these values are too small to affect the positioning of the adsorbed molecules. When the loading is high, resulting in a significant distance between the adsorbed molecules, each adsorption site becomes independent of others. Consequently, the ambient-pressure selectivity $s\e{1}$ remains equal to the low-pressure selectivity $s\e{0}$ since the guest--guest interactions become negligible. This finding substantiates the critical role played by cooperative effects among guest molecules when considering a saturated material.
 
 \begin{figure*}[ht]
   \centering
     \includegraphics[width=0.45\textwidth]{figures/2-thermo/JUFBIX_clean.jpg}
     \includegraphics[width=0.45\textwidth]{figures/2-thermo/JUFBIX_clean_isotherm_xenon_krypton_298K.jpg}
-    \caption{JUFBIX: Representation of a clean version (all solvent removed) of the cobalt(II) coordination framework [Co$_2$(L)(ppda)$_2$]$_2\cdot$H$_2$O, where the ligand L is 2,8-di(1\emph{H}-imidazol-1-yl)dibenzofuran and the carboxylic acid ligand H$_2$ppda is 4,$4'$-(perfluoropropane-2,2-diyl)dibenzoic acid loaded with xenon and krypton obtained by GCMC calculations. Color code: Co in dark cyan, C in gray, O in red, H in white, N in blue, F in green ; Xe in transparent pink and Kr in cyan for the adsorbates. The mono-component isotherms fitted with a 1-site Langmuir model (equation~\ref{eq:langmuir_1}) for both xenon and krypton at \SI{298}{\kelvin} is represented on the right side.}\label{fgr:SI:examples:JUFBIX}
+    \caption{\texttt{JUFBIX}: Representation of a clean version (all solvent removed) of the cobalt(II) coordination framework [Co$_2$(L)(ppda)$_2$]$_2\cdot$H$_2$O, where the ligand L is 2,8-di(1\emph{H}-imidazol-1-yl)dibenzofuran and the carboxylic acid ligand H$_2$ppda is 4,$4'$-(perfluoropropane-2,2-diyl)dibenzoic acid loaded with xenon and krypton obtained by GCMC calculations. Color code: Co in dark cyan, C in gray, O in red, H in white, N in blue, F in green ; Xe in transparent pink and Kr in cyan for the adsorbates. The mono-component isotherms fitted with a 1-site Langmuir model (equation~\ref{eq:langmuir_1}) for both xenon and krypton at \SI{298}{\kelvin} is represented on the right side.}\label{fgr:SI:examples:JUFBIX}
   \end{figure*}
 
-GOMREG and JAVTAC are two frameworks categorized as materials with a moderate decrease in selectivity from low to ambient pressure. In the case of GOMREG, the channels consist of one-dimensional tubes that are larger tcompared to KAXQIL or JUFBIX (refer to Figure~\ref{fgr:SI:examples:GOMREG} and Table~\ref{tbl:effect}). The adsorption sites alternate from left to right inside the channels, resulting in an organized ``zigzag'' pattern of adsorbed molecules. Analyzing the adsorption enthalpies, it is observed that both xenon and krypton exhibit lower enthalpies by a similar margin, indicating an equivalent stabilization for both atoms. Consequently, the enthalpic contribution to the selectivity change is close to 1. 
+  \texttt{GOMREG} and \texttt{JAVTAC} are two frameworks categorized as materials with a moderate decrease in selectivity from low to ambient pressure. In the case of GOMREG, the channels consist of one-dimensional tubes that are larger tcompared to \texttt{KAXQIL} or \texttt{JUFBIX} (refer to Figure~\ref{fgr:SI:examples:GOMREG} and Table~\ref{tbl:effect}). The adsorption sites alternate from left to right inside the channels, resulting in an organized ``zigzag'' pattern of adsorbed molecules. Analyzing the adsorption enthalpies, it is observed that both xenon and krypton exhibit lower enthalpies by a similar margin, indicating an equivalent stabilization for both atoms. Consequently, the enthalpic contribution to the selectivity change is close to 1. 
 Due to its smaller size and weaker interaction with the adsorption site, Krypton has more available space within the pore structure. This leads to an entropic advantage for Kr, as reflected by the entropic contribution $k\e{S}$ of $0.64$ in Table~\ref{tbl:effect}. These findings suggest that while enthalpic considerations primarily account for the observed changes at a statistical level, as discussed in previous sections, entropic considerations can play a significant role in pressure-dependent selectivity for specific cases.
 
 \begin{figure*}[ht]
   \centering
     \includegraphics[width=0.45\textwidth]{figures/2-thermo/GOMREG_clean.jpg}
     \includegraphics[width=0.45\textwidth]{figures/2-thermo/GOMREG_clean_isotherm_xenon_krypton_298K.jpg}
-    \caption{GOMREG: Representation of a clean version (all solvent removed) of this aluminophosphate AlPO$_4$-$n$ that has a zeotype LAU topology with one-dimensional 10-ring channels loaded with xenon and krypton obtained by GCMC calculations. Color code: Al in silver, P in orange, O in red ; Xe in transparent pink and Kr in cyan for the adsorbates. The mono-component isotherms fitted with a 1-site Langmuir model (equation~\ref{eq:langmuir_1}) for both xenon and krypton at \SI{298}{\kelvin} is represented on the right side.}\label{fgr:SI:examples:GOMREG}
+    \caption{\texttt{GOMREG}: Representation of a clean version (all solvent removed) of this aluminophosphate AlPO$_4$-$n$ that has a zeotype LAU topology with one-dimensional 10-ring channels loaded with xenon and krypton obtained by GCMC calculations. Color code: Al in silver, P in orange, O in red ; Xe in transparent pink and Kr in cyan for the adsorbates. The mono-component isotherms fitted with a 1-site Langmuir model (equation~\ref{eq:langmuir_1}) for both xenon and krypton at \SI{298}{\kelvin} is represented on the right side.}\label{fgr:SI:examples:GOMREG}
   \end{figure*}
 
 The remaining materials discussed in this third category exhibit a significant decrease in selectivity from low to ambient pressure. To investigate the factors contributing to this decrease, several phenomena that are relevant for screening studies have been examined, as they can impose limitations on the working performance of materials that initially appear to be ``top performer'' based on zero-pressure screening.
 
 
-For example, GOMRAC has a similar structure compared to GOMREG (see Figure~\ref{fgr:SI:examples:GOMRAC}), with the distinction of having smaller pores and channels are smaller (see the values of the D$_i$, and the D$_f$, in Table~\ref{tbl:effect}). Consequently, the distances between adsorbed molecules--- in their ideal sites ---  are smaller. At such close distances, it is reasonable to assume that the interactions between adsorbates favor krypton over xenon molecules in GOMRAC (see LJ potentials at distance lower than \SI{4.2}{\angstrom} on Figure~\ref{fgr:LJ}). This enhanced stabilization of krypton relative to xenon results in an enthalpic contribution $k\e{H}$ of $0.58$. Moreover, this finding is consistent with the equivalent guest--guest interactions observed in GOMREG, as discussed earlier. It explains why the difference in adsorption enthalpies becomes smaller for GOMRAC, while it remains unchanged for GOMREG (between low and ambient pressure). This further validates the critical role of interactions between adsorbed molecules and their dependence on guest-guest distances, particularly under high loading conditions.
+For example, \texttt{GOMRAC} has a similar structure compared to \texttt{GOMREG} (see Figure~\ref{fgr:SI:examples:GOMRAC}), with the distinction of having smaller pores and channels are smaller (see the values of the D$_i$, and the D$_f$, in Table~\ref{tbl:effect}). Consequently, the distances between adsorbed molecules--- in their ideal sites ---  are smaller. At such close distances, it is reasonable to assume that the interactions between adsorbates favor krypton over xenon molecules in GOMRAC (see LJ potentials at distance lower than \SI{4.2}{\angstrom} on Figure~\ref{fgr:LJ}). This enhanced stabilization of krypton relative to xenon results in an enthalpic contribution $k\e{H}$ of $0.58$. Moreover, this finding is consistent with the equivalent guest--guest interactions observed in \texttt{GOMREG}, as discussed earlier. It explains why the difference in adsorption enthalpies becomes smaller for \texttt{GOMRAC}, while it remains unchanged for \texttt{GOMREG} (between low and ambient pressure). This further validates the critical role of interactions between adsorbed molecules and their dependence on guest-guest distances, particularly under high loading conditions.
 
 \begin{figure*}[ht]
   \centering
     \includegraphics[width=0.45\textwidth]{figures/2-thermo/GOMRAC_clean.jpg}
     \includegraphics[width=0.45\textwidth]{figures/2-thermo/GOMRAC_clean_isotherm_xenon_krypton_298K.jpg}
-    \caption{GOMRAC: Representation of a clean version (all solvent removed) of this aluminophosphate AlPO$_4$-$n$ that has a zeotype LAU topology with one-dimensional 10-ring channels loaded with xenon and krypton obtained by GCMC calculations. Color code: Al in silver, P in orange, O in red; Xe in transparent pink and Kr in cyan for the adsorbates. The mono-component isotherms fitted with a 1-site Langmuir model (equation~\ref{eq:langmuir_1}) for both xenon and krypton at \SI{298}{\kelvin} is represented on the right side. It seems that this aluminophosphate is just a smaller version of GOMREG.}\label{fgr:SI:examples:GOMRAC}
+    \caption{\texttt{GOMRAC}: Representation of a clean version (all solvent removed) of this aluminophosphate AlPO$_4$-$n$ that has a zeotype LAU topology with one-dimensional 10-ring channels loaded with xenon and krypton obtained by GCMC calculations. Color code: Al in silver, P in orange, O in red; Xe in transparent pink and Kr in cyan for the adsorbates. The mono-component isotherms fitted with a 1-site Langmuir model (equation~\ref{eq:langmuir_1}) for both xenon and krypton at \SI{298}{\kelvin} is represented on the right side. It seems that this aluminophosphate is just a smaller version of \texttt{GOMREG}.}\label{fgr:SI:examples:GOMRAC}
   \end{figure*}
 
-In the case of MISQIQ, the pure-component Xe isotherm depicted in Figure~\ref{fgr:MISQIQ} oes not conform to a single-site Langmuir isotherm, but rather aligns well with a two-site Langmuir model (see Figure~\ref{fgr:MISQIQ}). Upon visual examination of the adsorbed density at various loadings, it becomes evident that the second step in the isotherm (representing about {20\%} of the uptake at full loading) icorresponds to a reorganization of the adsorbate molecules accompanied by a contraction of interatomic distances. It is important to note that this reorganization does not involve the occupation of a distinct and separate adsorption site at high loading. In this case, the change in selectivity can be attributed to the potential for adsorbate reorganization within the nanopores of the material. This reorganization, which can be detected through the xenon isotherm alone, plays a significant role in determining the material's selectivity at ambient pressure. The repacking of the adsorbed phase during this reorganization process is associated with a strong entropic effect and also influences the enthalpic contribution to selectivity.
+In the case of \texttt{MISQIQ}, the pure-component Xe isotherm depicted in Figure~\ref{fgr:MISQIQ} oes not conform to a single-site Langmuir isotherm, but rather aligns well with a two-site Langmuir model (see Figure~\ref{fgr:MISQIQ}). Upon visual examination of the adsorbed density at various loadings, it becomes evident that the second step in the isotherm (representing about {20\%} of the uptake at full loading) icorresponds to a reorganization of the adsorbate molecules accompanied by a contraction of interatomic distances. It is important to note that this reorganization does not involve the occupation of a distinct and separate adsorption site at high loading. In this case, the change in selectivity can be attributed to the potential for adsorbate reorganization within the nanopores of the material. This reorganization, which can be detected through the xenon isotherm alone, plays a significant role in determining the material's selectivity at ambient pressure. The repacking of the adsorbed phase during this reorganization process is associated with a strong entropic effect and also influences the enthalpic contribution to selectivity.
 
 \begin{figure*}[t]
   \centering
     \includegraphics[width=0.48\textwidth]{figures/2-thermo/MISQIQ_clean.jpg}\hfill
     \includegraphics[width=0.48\textwidth]{figures/2-thermo/MISQIQ_clean_isotherm_xenon_krypton_298K.jpg}
-    \caption{Representation of a chiral open-framework fluoroaluminophosphate [C$_4$N$_3$H$_{16}$]$\cdot$[Al$_6$P$_3$O$_{12}$F$_6$(OH)$_6$] denoted AlPO-JU89 (referenced MISQIQ in the Cambridge structural database), which has been loaded with xenon and krypton in a GCMC simulation, on the left side.\autocite{MISQIQ} Color code: Al in silver, P in orange, O in red, H in white and F in green for the framework; Xe in transparent pink and Kr in cyan for the adsorbates. The pure-component isotherms fitted with a 2-site Langmuir model (equation~\ref{eq:langmuir_2}) for both xenon and krypton at \SI{298}{\kelvin} on the right side.}\label{fgr:MISQIQ}
+    \caption{Representation of a chiral open-framework fluoroaluminophosphate [C$_4$N$_3$H$_{16}$]$\cdot$[Al$_6$P$_3$O$_{12}$F$_6$(OH)$_6$] denoted AlPO-JU89 (referenced \texttt{MISQIQ} in the Cambridge structural database), which has been loaded with xenon and krypton in a GCMC simulation, on the left side.\autocite{MISQIQ} Color code: Al in silver, P in orange, O in red, H in white and F in green for the framework; Xe in transparent pink and Kr in cyan for the adsorbates. The pure-component isotherms fitted with a 2-site Langmuir model (equation~\ref{eq:langmuir_2}) for both xenon and krypton at \SI{298}{\kelvin} on the right side.}\label{fgr:MISQIQ}
   \end{figure*}
 
-The materials BAEDTA01, VIWMOF, LUDLAZ, WOJJOV, and VAPBIZ fall into the category of having more than one available adsorption site, resulting in a significant drop in selectivity from low to ambient pressure. The pure-component isotherms and the representation of the materials loaded in xenon and krypton molecules (presented in the supporting information of the Ref.~\cite{Ren_2021} Figures~S19-23) confirm the existence of at least two distinct adsorption sites in each material. The preferential filling of the most selective sites (i.e., the most favorable for Xe) occurs at low loading, while the less selective sites are populated as the pressure increases. Consequently, a net decrease in selectivity at ambient pressure is observed for these materials. The existence of different types of adsorption sites and their impact on Xe/Kr selectivity (at non-zero pressure) suggests the inclusion of this factor in the screening of pure-component isotherms without the need for explicit multi-component GCMC simulations.
+The materials \texttt{BAEDTA01}, \texttt{VIWMOF}, \texttt{LUDLAZ}, \texttt{WOJJOV}, and \texttt{VAPBIZ} fall into the category of having more than one available adsorption site, resulting in a significant drop in selectivity from low to ambient pressure. The pure-component isotherms and the representation of the materials loaded in xenon and krypton molecules (presented in the supporting information of the Ref.~\cite{Ren_2021} Figures~S19-23) confirm the existence of at least two distinct adsorption sites in each material. The preferential filling of the most selective sites (i.e., the most favorable for Xe) occurs at low loading, while the less selective sites are populated as the pressure increases. Consequently, a net decrease in selectivity at ambient pressure is observed for these materials. The existence of different types of adsorption sites and their impact on Xe/Kr selectivity (at non-zero pressure) suggests the inclusion of this factor in the screening of pure-component isotherms without the need for explicit multi-component GCMC simulations.
 
 \section{Toward the development of new screening tools}
 
